udates to portfolio
portfolio updated

--- a/Portfolio/workexamples.html
+++ b/Portfolio/workexamples.html
@@ -24,7 +24,7 @@
 </header>
 <body>
     <h1 class="aboutmetext"> Here are some examples of sites that I have created!</h1>
-    <h2> Here is Doughnuts one of the sites created and can be found at https://doughnutsehu.netlify.app/ </h2>
+    <h2> Here is one of the sites created and can be found at https://doughnutsehu.netlify.app/ </h2>
     <div class="row">
         <div class="column">
           <img src="images/doughnutshp.png" alt="hp" style="width:100%">
@@ -37,7 +37,7 @@
         </div>
       </div>
     
-      <h2> Here is Dubai Landscape one of the sites created which can be found at https://dubailandscapesehu.netlify.app</h2>
+      <h2> Here is one of the sites created which can be found at https://dubailandscapesehu.netlify.app</h2>
 
       <div class="row1">
         <div class="column1">
@@ -52,7 +52,7 @@
       </div>
 </body>
 <footer>
-  <a href="https://www.facebook.com/matt.davies.5437/" class="fa fa-facebook"></a>
+  <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
   <a href="https://twitter.com/MatthewDaviesLD" class="fa fa-twitter"></a>
   <a href="https://www.linkedin.com/in/matthew-davies-044a8917b/" class="fa fa-linkedin"></a>
   <a href="https://www.youtube.com/channel/UC6CoMh4L1wpvt4DGalDFK2w" class="fa fa-youtube"></a>
