--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -68,7 +68,7 @@
 </body>
 
 <footer>
-  <a href="https://www.facebook.com/matt.davies.5437/" class="fa fa-facebook"></a>
+  <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
   <a href="https://twitter.com/MatthewDaviesLD" class="fa fa-twitter"></a>
   <a href="https://www.linkedin.com/in/matthew-davies-044a8917b/" class="fa fa-linkedin"></a>
   <a href="https://www.youtube.com/channel/UC6CoMh4L1wpvt4DGalDFK2w" class="fa fa-youtube"></a>
